fix(ui): correct menu overlap and fix dark mode toggle issue (dark mode is a default and only theme)

--- a/src/assets/layout/_responsive.scss
+++ b/src/assets/layout/_responsive.scss
@@ -91,7 +91,7 @@
             //height: 100vh;
             height: fit-content; //edited from 100vh
             border-top-left-radius: 0;
-            border-bottom-left-radius: 0;
+            border-top-right-radius: 0;
             transition: transform 0.4s cubic-bezier(0.05, 0.74, 0.2, 0.99),
             left 0.4s cubic-bezier(0.05, 0.74, 0.2, 0.99);
 
